# privtmp_minecraft_server_discord_bot

./: Cargo.toml
src/: discord_interactions_handler.rs  discord_user_custom_permissions.rs  handler -- default.rs.txt  handler.rs  interaction_with_minecraft_server.rs  main.rs  secret.rs  useful.rs
src/mcserver_handler/: mod.rs
src/mcserver_handler/mcsrv_thread/: dcmsg.rs  mod.rs  stdout.rs
