[package]
name = "minecraft_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"
chrono = "0.4.20"